# Visual-Servoing

Kinova_WS/src/Aruco_Tracker/: aruco_tracker.py
Kinova_WS/src/ros_kortex/kortex_description/robots/: kortex_robot.xacro
Kinova_WS/src/ros_kortex/kortex_driver/launch/: kortex_driver.launch
ur_vs_gazebo/src/: PBVS_updated_v1_0.py  aruco_pose.py  aruco_pose_gazebo.py  obj_det_WORKING.py  pbvs_updated_v0.py
ur_vs_gazebo/src/object_detection/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  object_detection.cbp
ur_vs_gazebo/src/object_detection/catkin_generated/: object_detection-msg-extras.cmake.develspace.in  package.cmake  pkg.develspace.context.pc.py
ur_vs_gazebo/src/object_detection/catkin_generated/installspace/: object_detection-msg-extras.cmake  object_detectionConfig.cmake
ur_vs_gazebo/src/object_detection/cmake/: object_detection-genmsg-context.py  object_detection-genmsg.cmake
ur_vs_gazebo/src/object_detection/msg/: image_data.msg
ur_vs_gazebo/src/object_detection/src/: camshift_adaptive_kf_tracker.cpp  camshift_kalman_filter2.cpp  camshift_kalman_tracker.cpp  camshift_kf_tracking.cpp  camshift_only_tracker.cpp  camshift_segmentation.cpp  extended_kalman_filter_tracking.cpp  gnuplot_ci.cpp  kalman_filter_depth_tracking.cpp  kalman_filter_tracking.cpp  plots.cpp
ur_vs_gazebo/src/object_detection/src/results/: camshiftfeatures.txt  featurescompare.txt
ur_vs_gazebo/src/universal_robot/universal_robot/: CTestTestfile.cmake  Makefile  cmake_install.cmake  universal_robot.cbp
ur_vs_gazebo/src/universal_robot/ur5_moveit_config/: CTestTestfile.cmake  Makefile  cmake_install.cmake  ur5_moveit_config.cbp
ur_vs_gazebo/src/universal_robot/ur5_moveit_config/catkin_generated/: pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
ur_vs_gazebo/src/universal_robot/ur5_moveit_config/launch/: moveit.rviz
ur_vs_gazebo/src/universal_robot/ur_bringup/: CTestTestfile.cmake  Makefile  cmake_install.cmake  ur_bringup.cbp
ur_vs_gazebo/src/universal_robot/ur_bringup/catkin_generated/: pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
ur_vs_gazebo/src/universal_robot/ur_description/urdf/: ur5_robot.urdf.xacro
ur_vs_gazebo/src/universal_robot/ur_driver/: CTestTestfile.cmake  Makefile  cmake_install.cmake  setup_custom_pythonpath.sh  ur_driver.cbp
ur_vs_gazebo/src/universal_robot/ur_driver/catkin_generated/: pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  python_distutils_install.sh  safe_execute_install.cmake
ur_vs_gazebo/src/universal_robot/ur_gazebo/: CTestTestfile.cmake  Makefile  cmake_install.cmake  ur_gazebo.cbp
ur_vs_gazebo/src/universal_robot/ur_gazebo/catkin_generated/: pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
ur_vs_gazebo/src/universal_robot/ur_gazebo/launch/: ur5.launch  ur5_my_world.launch  ur5_my_world_1.launch  ur5_tumbling.launch
ur_vs_gazebo/src/universal_robot/ur_gazebo/worlds/: Dual_arm.world  Image_Target.world  Image_Target_1.world  Test.world  Tumbling_VS.world  circular_moving_target.world  my_world4 aruco.world  my_world4_ball_moving.world  my_world_aruco_1.world  my_world_aruco_2.world  my_world_aruco_3.world  my_world_aruco_4.world  my_world_aruco_5.world  (+1 more)
ur_vs_gazebo/src/universal_robot/ur_kinematics/: CTestTestfile.cmake  Makefile  cmake_install.cmake  ur_kinematics.cbp
ur_vs_gazebo/src/universal_robot/ur_modern_driver/: CTestTestfile.cmake  ur_modern_driver.cbp
ur_vs_gazebo/src/universal_robot/ur_msgs/: CTestTestfile.cmake  Makefile  cmake_install.cmake  ur_msgs.cbp
ur_vs_gazebo/src/ur5_vs/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml  ur5_vs.cbp
ur_vs_gazebo/src/ur5_vs/atomic_configure/: local_setup.sh  setup.sh
ur_vs_gazebo/src/ur5_vs/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh  ur5_vs-msg-extras.cmake.develspace.in
ur_vs_gazebo/src/ur5_vs/catkin_generated/installspace/: ur5_vs-msg-extras.cmake  ur5_vs-msg-paths.cmake  ur5_vs.pc  ur5_vsConfig.cmake
ur_vs_gazebo/src/ur5_vs/catkin_generated/stamps/ur5_vs/: _setup_util.py.stamp
ur_vs_gazebo/src/ur5_vs/cmake/: ur5_vs-genmsg-context.py  ur5_vs-genmsg.cmake
ur_vs_gazebo/src/ur5_vs/data/: etaVstime.ods
ur_vs_gazebo/src/ur5_vs/devel/: .rosinstall
ur_vs_gazebo/src/ur5_vs/devel/lib/pkgconfig/: ur5_vs.pc
ur_vs_gazebo/src/ur5_vs/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ur_vs_gazebo/src/ur5_vs/gtest/gtest/: CTestTestfile.cmake  Makefile
ur_vs_gazebo/src/ur5_vs/include/: my_funcs.h  ur5_geo_jacobian.h
ur_vs_gazebo/src/ur5_vs/msgs/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  image_data.proto  joint_angles.msg  joint_angles.proto  joint_efforts.proto  joint_states.msg  joint_vel.msg  joint_velocities.proto  sim_variables.proto  sim_variables2.msg
ur_vs_gazebo/src/ur5_vs/scripts/: 2d_follow_ur5_new.py
ur_vs_gazebo/src/ur5_vs/src/: Inter_Mat1.npy  Jacob_ee_to_camera.cpp  New_Gradient.py  PBVS_updated_v1.py  Plots.py  Starting_Posn.py  UR5_Run_RA.py  UR5_run.py  Vcamera_to_Base.py  Vcamera_to_Base_RA.py  _jacobianM.py  arcuo_pose_est.py  area_interaction_matrix.cpp  ball_animation_plugin _original.cpp  ball_animation_plugin.cpp  ball_animation_plugin_edit_linkvel.cpp  base_to_ee_transform.cpp  calibration_transform_setup.cpp  compute_geo_jacobian_new.cpp  compute_image_jacobian.cpp  compute_image_jacobian_area.cpp  compute_image_jacobian_depth.cpp  compute_image_jacobian_four_points.cpp  compute_image_jacobian_sift.cpp  compute_new_geo_jacobian.cpp  ee_to_camera_transfrom.cpp  eyeinhand_6dof_4points.cpp  eyeinhand_6dof_area.cpp  eyeinhand_6dof_area_new.cpp  eyeinhand_6dof_area_sectask.cpp  eyeinhand_6dof_area_tracking.cpp  eyeinhand_6dof_depthtracking.cpp  eyeinhand_6dof_tracking.cpp  eyeinhand_ibvs.cpp  eyeinhand_planar_tracking.cpp  eyeinhand_plane_tracking.cpp  eyeinhand_tracking_sift.cpp  gazebo_ibvs_area_intmatrix.cpp  gazebo_ibvs_centroid_area.cpp  gazebo_ibvs_three_features.cpp  (+42 more)
(+29 files in other folders)
